--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,12 +1,16 @@
+@import 'colors';
+@import 'forms';
+@import 'typography';
+
+html {
+	box-sizing: border-box;
+	font-size: 10px;
+}
+
 #app {
-  font-family: 'Avenir', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
   color: #2c3e50;
   margin-top: 60px;
-}
-
-.vt-form-text {
-	
 }
