--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -3,6 +3,25 @@
 	border-radius: 2px;
 	padding: 1.4rem 2rem 1.6rem;
 	width: 100%;
+	position: relative;
+	max-width: 400px;
+
+	&:after {
+		box-sizing: inherit;
+		content: "";
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		z-index: 999;
+		height: 2px;
+		border-bottom-left-radius: 2px;
+		border-bottom-right-radius: 2px;
+		background-position: 0% 0%;
+		background-size: 500% auto;
+		background: linear-gradient(to right, $purple-dark, $purple-light);
+		animation: gradient 3s linear infinite;
+	}
 
 	input {
 		background: transparent;
@@ -11,5 +30,11 @@
 		font-size: 1.6rem;
 		line-height: 2rem;
 		width: 100%;
+		outline: none;
 	}
+}
+
+@keyframes gradient {
+	0%{background-position:0 0}
+	100%{background-position:100% 0}
 }
