--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -4,7 +4,7 @@
 	padding: 1.4rem 2rem 1.6rem;
 	width: 100%;
 	position: relative;
-	max-width: 400px;
+	margin: 2rem;
 
 	&:after {
 		box-sizing: inherit;
@@ -23,7 +23,7 @@
 		animation: gradient 3s linear infinite;
 	}
 
-	input {
+	input, textarea{
 		background: transparent;
 		border-style: none;
 		color: $maroon;
@@ -31,6 +31,10 @@
 		line-height: 2rem;
 		width: 100%;
 		outline: none;
+	}
+
+	textarea {
+		font-family: "Amiko", sans-serif;
 	}
 }
 
