Working on button styling.  Holding off on filll and transition effects for now

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,3 +1,4 @@
+@import 'buttons';
 @import 'colors';
 @import 'forms';
 @import 'typography';
@@ -5,6 +6,10 @@
 html {
 	box-sizing: border-box;
 	font-size: 10px;
+}
+
+button {
+	border: none;
 }
 
 #app {
