Added font sizes for headers

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -2,3 +2,31 @@ body {
 	font-family: "amiko", sans-serif;
 	font-weight: 400;
 }
+
+h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
+	font-family: "signika", sans-serif;
+}
+
+h1 {
+	font-size: 3rem;
+}
+
+h2 {
+ font-size: 2.6rem;
+}
+
+h3 {
+	font-size: 2.2rem;
+}
+
+h4 {
+	font-size: 1.8rem;
+}
+
+h5 {
+	font-size: 1.4rem;
+}
+
+h6 {
+	font-size: 1rem;
+}
