--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -3,6 +3,10 @@ body {
 	font-weight: 400;
 }
 
+p {
+	font-size: 1.6rem;
+}
+
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 	font-family: "signika", sans-serif;
 }
@@ -12,21 +16,21 @@ h1 {
 }
 
 h2 {
- font-size: 2.6rem;
+ font-size: 2.72rem;
 }
 
 h3 {
-	font-size: 2.2rem;
+	font-size: 2.44rem;
 }
 
 h4 {
-	font-size: 1.8rem;
+	font-size: 2.16rem;
 }
 
 h5 {
-	font-size: 1.4rem;
+	font-size: 1.88rem;
 }
 
 h6 {
-	font-size: 1rem;
+	font-size: 1.6rem;
 }
