Added remaining colors plus commentary

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,5 +1,12 @@
 $pale-yellow: #F2D99D;
 $purple-dark: #362D59;
 $purple-light: #D757F6;
+$pink: #E082F8;
 $maroon: #6B0C28;
-$slate-color: rgb(16,24,50);
+$burnt-orange: #D65720;
+
+$black: #000;
+$white: #FFF;
+
+// Not on the moqup, but used for the color of our button shadows
+$slate-color: #101832;
