Technically, these should be black

--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -93,7 +93,7 @@
 		background: white;
 		border-image: linear-gradient(45deg, $purple-dark 0%, $purple-light 100%);
 		border-image-slice: 1;
-		color: $slate-color;
+		color: $black;
 
 		&:before {
 			height: 100%;
