--- a/src/styles/_whitespace.scss
+++ b/src/styles/_whitespace.scss
@@ -3,7 +3,12 @@
  * margins, for a given element.
  * * * * */
 
-// The first two classes zero-out the margins and padding for an element.
+// The first two classes zero-out the margins and padding for an element.  These
+// are the only classes where the rules are not marked as important, as it's
+// assumed that you'll be using them in conjunction with other padding rules
+//
+// For classes that set margins and/or padding to 0 AND are important, see
+// .vt-m-0 and .vt-p-0 respectively
 .vt-m-reset {
 	margin: 0;
 }
@@ -15,19 +20,19 @@
 // Next, some classes for assigning auto to the margins.  Currently only three
 // classes exist, feel free to add more.
 .vt-m-auto {
-	margin: auto;
+	margin: auto !important;
 }
 
 // height
 .vt-mh-auto {
-	margin-top: auto;
-	margin-bottom: auto;
+	margin-top: auto !important;
+	margin-bottom: auto !important;
 }
 
 // width
 .vt-mw-auto {
-	margin-left: auto;
-	margin-right: auto;
+	margin-left: auto !important;
+	margin-right: auto !important;
 }
 
 // Finally, classes for assigning actual numbers to the margins and padding.
@@ -35,190 +40,250 @@
 // affect a specific axis, to classes that affect only one side.
 
 // All-around margins
+.vt-m-0 {
+	margin: 0 !important;
+}
+
 .vt-m-1 {
-	margin: 1rem;
+	margin: 1rem !important;
 }
 
 .vt-m-2 {
-	margin: 2rem;
+	margin: 2rem !important;
 }
 
 .vt-m-3 {
-	margin: 3rem;
+	margin: 3rem !important;
 }
 
 // All-around padding
+.vt-p-0 {
+	padding: 0 !important;
+}
+
 .vt-p-1 {
-	padding: 1rem;
+	padding: 1rem !important;
 }
 
 .vt-p-2 {
-	padding: 2rem;
+	padding: 2rem !important;
 }
 
 .vt-p-3 {
-	padding: 3rem;
+	padding: 3rem !important;
 }
 
 // Height-affecting margins
+.vt-mh-0 {
+	margin-top: 0 !important;
+	margin-bottom: 0 !important;
+}
+
 .vt-mh-1 {
-	margin-top: 1rem;
-	margin-bottom: 1rem;
+	margin-top: 1rem !important;
+	margin-bottom: 1rem !important;
 }
 
 .vt-mh-2 {
-	margin-top: 2rem;
-	margin-bottom: 2rem;
+	margin-top: 2rem !important;
+	margin-bottom: 2rem !important;
 }
 
 .vt-mh-3 {
-	margin-top: 3rem;
-	margin-bottom: 3rem;
+	margin-top: 3rem !important;
+	margin-bottom: 3rem !important;
 }
 
 // Height-affecting padding
+.vt-ph-0 {
+	padding-top: 0 !important;
+	padding-bottom: 0 !important;
+}
+
 .vt-ph-1 {
-	padding-top: 1rem;
-	padding-bottom: 1rem;
+	padding-top: 1rem !important;
+	padding-bottom: 1rem !important;
 }
 
 .vt-ph-2 {
-	padding-top: 2rem;
-	padding-bottom: 2rem;
+	padding-top: 2rem !important;
+	padding-bottom: 2rem !important;
 }
 
 .vt-ph-3 {
-	padding-top: 3rem;
-	padding-bottom: 3rem;
+	padding-top: 3rem !important;
+	padding-bottom: 3rem !important;
 }
 
 // Width-affecting margins
+.vt-mw-0 {
+	margin-left: 0 !important;
+	margin-right: 0 !important;
+}
+
 .vt-mw-1 {
-	margin-left: 1rem;
-	margin-right: 1rem;
+	margin-left: 1rem !important;
+	margin-right: 1rem !important;
 }
 
 .vt-mw-2 {
-	margin-left: 2rem;
-	margin-right: 2rem;
+	margin-left: 2rem !important;
+	margin-right: 2rem !important;
 }
 
 .vt-mw-3 {
-	margin-left: 3rem;
-	margin-right: 3rem;
+	margin-left: 3rem !important;
+	margin-right: 3rem !important;
 }
 
 // Width-affecting padding
+.vt-pw-0 {
+	padding-left: 0 !important;
+	padding-right: 0 !important;
+}
+
 .vt-pw-1 {
-	padding-left: 1rem;
-	padding-right: 1rem;
+	padding-left: 1rem !important;
+	padding-right: 1rem !important;
 }
 
 .vt-pw-2 {
-	padding-left: 2rem;
-	padding-right: 2rem;
+	padding-left: 2rem !important;
+	padding-right: 2rem !important;
 }
 
 .vt-pw-3 {
-	padding-left: 3rem;
-	padding-right: 3rem;
+	padding-left: 3rem !important;
+	padding-right: 3rem !important;
 }
 
 // Individual margins.  Goes clockwise first before the margin increases
+.vt-mt-0 {
+	margin-top: 0 !important;
+}
+
+.vt-mr-0 {
+	margin-right: 0 !important;
+}
+
+.vt-mb-0 {
+	margin-bottom: 0 !important;
+}
+
+.vt-ml-0 {
+	margin-left: 0 !important;
+}
+
 .vt-mt-1 {
-	margin-top: 1rem;
+	margin-top: 1rem !important;
 }
 
 .vt-mr-1 {
-	margin-right: 1rem;
+	margin-right: 1rem !important;
 }
 
 .vt-mb-1 {
-	margin-bottom: 1rem;
+	margin-bottom: 1rem !important;
 }
 
 .vt-ml-1 {
-	margin-left: 1rem;
+	margin-left: 1rem !important;
 }
 
 .vt-mt-2 {
-	margin-top: 2rem;
+	margin-top: 2rem !important;
 }
 
 .vt-mr-2 {
-	margin-right: 2rem;
+	margin-right: 2rem !important;
 }
 
 .vt-mb-2 {
-	margin-bottom: 2rem;
+	margin-bottom: 2rem !important;
 }
 
 .vt-ml-2 {
-	margin-bottom: 2rem;
+	margin-bottom: 2rem !important;
 }
 
 .vt-mt-3 {
-	margin-top: 3rem;
+	margin-top: 3rem !important;
 }
 
 .vt-mr-3 {
-	margin-right: 3rem;
+	margin-right: 3rem !important;
 }
 
 .vt-mb-3 {
-	margin-bottom: 3rem;
+	margin-bottom: 3rem !important;
 }
 
 .vt-ml-3 {
-	margin-bottom: 3rem;
+	margin-bottom: 3rem !important;
 }
 
 // Individual padding.  Does a clockwise rotation before increasing padding
 // value
+.vt-pt-0 {
+	padding-top: 0 !important;
+}
+
+.vt-pr-0 {
+	padding-right: 0 !important;
+}
+
+.vt-pb-0 {
+	padding-bottom: 0 !important;
+}
+
+.vt-pl-0 {
+	padding-left: 0 !important;
+}
+
 .vt-pt-1 {
-	padding-top: 1rem;
+	padding-top: 1rem !important;
 }
 
 .vt-pr-1 {
-	padding-right: 1rem;
+	padding-right: 1rem !important;
 }
 
 .vt-pb-1 {
-	padding-bottom: 1rem;
+	padding-bottom: 1rem !important;
 }
 
 .vt-pl-1 {
-	padding-left: 1rem;
+	padding-left: 1rem !important;
 }
 
 .vt-pt-2 {
-	padding-top: 2rem;
+	padding-top: 2rem !important;
 }
 
 .vt-pr-2 {
-	padding-right: 2rem;
+	padding-right: 2rem !important;
 }
 
 .vt-pb-2 {
-	padding-bottom: 2rem;
+	padding-bottom: 2rem !important;
 }
 
 .vt-pl-2 {
-	padding-left: 2rem;
+	padding-left: 2rem !important;
 }
 
 .vt-pt-3 {
-	padding-top: 3rem;
+	padding-top: 3rem !important;
 }
 
 .vt-pr-3 {
-	padding-right: 3rem;
+	padding-right: 3rem !important;
 }
 
 .vt-pb-3 {
-	padding-bottom: 3rem;
+	padding-bottom: 3rem !important;
 }
 
 .vt-pl-3 {
-	padding-left: 3rem;
+	padding-left: 3rem !important;
 }
