Breakpoints would be a better name

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,7 +1,7 @@
+@import 'breakpoints';
 @import 'buttons';
 @import 'colors';
 @import 'forms';
-@import 'media-queries';
 @import 'typography';
 @import 'whitespace';
 
