Added basic navbar, now let's add the decorative elements

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -11,33 +11,37 @@ p {
 	font-size: 1.6rem;
 }
 
+a {
+	text-decoration: none;
+}
+
 // Headers use "signika" as a font
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 	font-family: "signika", sans-serif;
 }
 
 // Header sizes, by default, range from 3rem down to 1.6rem
-h1 {
+h1, .h1 {
 	font-size: 3rem;
 }
 
-h2 {
+h2, .h2 {
  font-size: 2.72rem;
 }
 
-h3 {
+h3, .h3 {
 	font-size: 2.44rem;
 }
 
-h4 {
+h4, .h4 {
 	font-size: 2.16rem;
 }
 
-h5 {
+h5, .h5 {
 	font-size: 1.88rem;
 }
 
-h6 {
+h6, .h6 {
 	font-size: 1.6rem;
 }
 
