--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -16,7 +16,7 @@ a {
 }
 
 // Headers use "signika" as a font
-h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
+h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6, .vt-gradient-btn {
 	font-family: "signika", sans-serif;
 }
 
